# QCV

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Fractures.cpp  Fractures.h  README.md  build.ninja  cmake_install.cmake  compile_commands.json  imgui.ini  main.cpp
.cache/clangd/index/: App.cpp.D84FCDF683DE5944.idx  App.h.08EB0BC6A36754BE.idx  CommCtrl.h.CD3EA259703E90F5.idx  Editor.cpp.5044B3472147B143.idx  Editor.h.EAA5E87004031254.idx  Fractures.cpp.2971A38231FCA524.idx  Fractures.h.090BEF7328FDC9E7.idx  Hook.cpp.89633F30384A77CD.idx  Hook.h.2397273CD2036EDF.idx  ObjIdl.h.2B841869EC00FBA0.idx  ObjIdlbase.h.513A664E592393D5.idx  QAbstractSocket.EBBB707EEFBBA8F1.idx  QAction.E8EBA6F9277A7920.idx  QApplication.09E59E7C133F6281.idx  QByteArray.46955CD5E678FD9F.idx  QCryptographicHash.F0300ABB5A6B2503.idx  QDeadlineTimer.4E8292F844BCDE57.idx  QDebug.D52C99D7181C475D.idx  QFlags.3D0CC341E8D4846A.idx  QHash.3D1868D21F100A43.idx  QHostAddress.255A836AC212DB8C.idx  QIODevice.47E238A6B6ACC7CD.idx  QIcon.0DF39D47F318428C.idx  QJsonDocument.DE3540B88AA15172.idx  QJsonObject.E6EDE1435FD653BD.idx  QList.F2E3C613B245FB88.idx  QMenu.76EDA2B0A49F86C0.idx  QMetaType.E3F8E21ADB82DD93.idx  QNetworkAccessManager.A2DAFF6806D0E487.idx  QNetworkProxy.E4BC1A498BE5D921.idx  QObject.F999E7AF63849795.idx  (+495 more)
Fractures_autogen/: deps  mocs_compilation.cpp
Fractures_autogen/2HXO4OYZVC/: moc_Shortcut.cpp  moc_Shortcut.cpp.d
Fractures_autogen/55Z4QJACBO/: moc_Tray.cpp  moc_Tray.cpp.d
Fractures_autogen/DOIORZJFT2/: moc_Hook.cpp  moc_Hook.cpp.d
Fractures_autogen/EWIEGA46WW/: moc_Fractures.cpp  moc_Fractures.cpp.d
Fractures_autogen/HBWPLPMCZC/: moc_SocketServer.cpp  moc_SocketServer.cpp.d
Fractures_autogen/U6VZBJVZUA/: moc_Editor.cpp  moc_Editor.cpp.d
Fractures_autogen/ZFTZH5Y4GD/: moc_App.cpp  moc_App.cpp.d
Libs/App/: App.cpp  App.h
Libs/Editor/: Editor.cpp  Editor.h
Libs/Hook/: Hook.cpp  Hook.h
Libs/ResourcesEmploy/: ResourcesEmploy.cpp  ResourcesEmploy.h
Libs/Shortcut/: Shortcut.cpp  Shortcut.h
Libs/SocketServer/: SocketServer.cpp  SocketServer.h
Libs/Tray/: Tray.cpp  Tray.h
Templates/: Singleton.hpp
(+8 files in other folders)
